Add endpoints for placing orders and querying users/products
Introduces a new endpoint to place orders and endpoints to fetch users who ordered a product and products ordered by a user. Refactors OrderService to support these operations, returning full User and Product objects instead of just names or IDs.